public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Montserrat:wght@100;300;400;500&display=swap');

* {
  padding: 0;
  margin: 0;
}

html {
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  font-size: 16px;
}

body {
  width: calc(min(40em, 80%));
  margin: 50px auto;
}

h2 {
  padding: 0.5em 0;
}

.toolbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 0.5em;
  margin-bottom: 20px;
}

.toolbar a {
  border: 1px solid grey;
  padding: 3px;
  border-radius: 2px;
  font-size: 80%;
  text-decoration: none;
  background: rgba(192, 128, 192, 0.2);
}

.get-help {
  display: inline-block;
  text-align: center;
  border: 1px solid grey;
  padding: 10px;
  margin: 10px 0;
  border-radius: 4px;
  width: calc(100% - 22px);
  text-decoration: none;
  background: rgba(192, 128, 192, 0.2);
}

.cards {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.item {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px;
  border: 1px solid grey;
  background: rgba(192, 128, 192, 0.2);
}

.item > .who {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.item > .buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.problem,
.tried {
  padding: 3px;
  border: 1px solid black;
}

legend {
  margin-left: 10px;
  padding: 0 2px;
  font-family: sans-serif;
}

.problem > div,
.tried > div {
  padding: 6px;
}

fieldset {
  background: rgba(192, 128, 192, 0.2);
}

label,
textarea {
  display: block;
}

label {
  margin-top: 2em;
}

textarea {
  margin: 10px 0;
  padding: 10px;
  width: calc(100% - 22px);
  height: 10em;
}

.journal h2 {
  font-weight: 300;
}

.journal .time {
  color: grey;
  text-align: right;
  font-size: 80%;
}

.journal .text p {
  margin: 1em 0;
  width: 80%;
}

.journal .day {
  margin: 10px 0;
  padding: 10px;
  border: 1px solid rgba(196, 196, 196, 0.5);
  background: rgba(196, 196, 196, 0.1);
}

.journal p.time {
  margin: 0;
  float: right;
  padding: 0;
}

.journal .text p:first-child {
  //margin: 0;
}

.journal pre {
  margin: 1em 0;
}

